--- a/src/backend/backend.csproj
+++ b/src/backend/backend.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.12" />
+    <PackageReference Include="dotenv.net" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.0.0-beta1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
